# verimu

./: .gitignore  .gitlab-ci.yml  README.md  bitbucket-pipelines.yml  package-lock.json  package.json  pat.token  test.yml  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  publish-npm.yml  push-to-bitbucket-repo.yml  push-to-gitlab-repo.yml  pusher.yml  release.yml  test.yml
ai-docs/: GENERATE_SBOM_AND_TSUP.md  NPM_SCANNER_SBOM_PIPELINE.md
ci-examples/: bitbucket-pipelines.yml  github-actions.yml  gitlab-ci.yml
scripts/: run-scan.mjs
src/: cli.ts  generate-sbom.ts  generate-spdx.ts  generate-swid.ts  index.ts  scan.ts
src/api/: client.ts
src/context/: snippet-extractor.ts  usage-context-engine.ts
src/core/: errors.ts  source.ts  types.ts
src/cve/: aggregator.ts  osv.ts  source.interface.ts
src/discovery/: index.ts  lockfile-discovery.ts  orchestrator.ts
src/github/: client.ts  index.ts  orchestrator.ts  types.ts
src/gitlab/: client.ts  index.ts  orchestrator.ts  types.ts
src/reporters/: console.ts  html.ts  platform.ts  reporter.interface.ts
src/sbom/: artifacts.ts  cyclonedx.ts  generator.interface.ts  shared.ts  spdx.ts  swid.ts
src/scanners/: registry.ts  scanner.interface.ts
test/fixtures/poetry-webapp/: pyproject.toml
test/fixtures/rust-webserver/: Cargo.toml
test/fixtures/uv-webapp/: pyproject.toml
test/unit/: aggregator.test.ts  artifact-generators.test.ts  cargo-scanner.test.ts  cli-recursive.test.ts  cli.test.ts  composer-scanner.test.ts  cyclonedx.test.ts  deno-scanner.test.ts  generate-sbom.test.ts  (+22 more)
(+89 files in other folders)
