[package]
name = "acme-server"
version = "0.5.0"
edition = "2021"

[dependencies]
actix-web = "4.4.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
actix-rt = "2.9.0"
